# LinearAlgebra

./: CMakeLists.txt
include/: Exceptions.hpp  Matrix.hpp  Parser.hpp  ThreadPoolConfig.hpp  Vector.hpp
src/: Matrix.cpp  ThreadPoolConfig.cpp  Vector.cpp  main.cpp  vector.cpp
tests/: incompleteData  invalidDimensions.txt  matrixA.txt  matrixB.txt  verify_results.py
